--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=nicolly
+DB_PASSWORD=vlr128732
+DB_NAME=db
